--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-01-29.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-01-29.md
@@ -12,7 +12,7 @@ anchor: "t-00-01-29"
 ## Transcript
 
 **Candace Owens:**
-> And he confirms what I told you about the Egyptian plains. So let's jump right back into this. Welcome back to Candice. Look, I have been very patient. I do tend to focus on the evidence that's in front of us, obviously asking questions when we come up across something that someone has said and it doesn't add up or if they lied, create a list.
+> And he confirms what I told you about the Egyptian planes. So let's jump right back into this. Welcome back to Candace. Look, I have been very patient. I do tend to focus on the evidence that's in front of us, obviously asking questions when we come up across something that someone has said and it doesn't add up or if they lied, create a list.
 
 ## Entities Mentioned
 
