--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-25-17.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-25-17.md
@@ -12,7 +12,7 @@ anchor: "t-00-25-17"
 ## Transcript
 
 **Tucker Carlson:**
-> Investigation in journalism and science, it's all the same process. I don't know the answer, and I'm going to sift through everything as open-mindedly as I can, as honestly as I can, to get to what the truth is. Again, that's science, that's law enforcement, that's journalism. It's all the same. That's justice. And I just want to make sure that is happening. And I just don't have a ton of confidence in the FBI or the men who run it. And I'm not saying that out of ignorance. at all. That's a scary part too. I'm not alleging anything I'm just saying I think it's really important that we have that. That is what authenticity sounds like. And that's what we're doing here. We are investigating, right? Sometimes you get something wrong, you correct it. But I was right about the Egyptian Plains.
+> Investigation in journalism and science, it's all the same process. I don't know the answer, and I'm going to sift through everything as open-mindedly as I can, as honestly as I can, to get to what the truth is. Again, that's science, that's law enforcement, that's journalism. It's all the same. That's justice. And I just want to make sure that is happening. And I just don't have a ton of confidence in the FBI or the men who run it. And I'm not saying that out of ignorance. at all. That's a scary part too. I'm not alleging anything I'm just saying I think it's really important that we have that. That is what authenticity sounds like. And that's what we're doing here. We are investigating, right? Sometimes you get something wrong, you correct it. But I was right about the Egyptian planes.
 
 ## Entities Mentioned
 
