--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-31-18.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-31-18.md
@@ -12,7 +12,7 @@ anchor: "t-00-31-18"
 ## Transcript
 
 **Candace Owens:**
-> We're right back to that, but it's Candice 19. It's Candice 19, that's what it is. And they think that maybe if they put the little six feet social distancing pads in the grocery store, that the PSYOP will win and make us believe that this is like common sense is the virus. I'm the common sense virus. It's coming around. It's so evil. Stay at home, wear a mask, save lives. You don't want to catch it. You don't want to catch the common sense, you guys. You don't want to catch it. Anyways, I dare, I'm sorry, I dare. And I have been very careful because I wasn't sure what direction she was going to go. If she was like, I was like, look, she's got a whole business that she's got to figure out. There's a lot of people in her ear.
+> We're right back to that, but it's Candace 19. It's Candace 19, that's what it is. And they think that maybe if they put the little six feet social distancing pads in the grocery store, that the PSYOP will win and make us believe that this is like common sense is the virus. I'm the common sense virus. It's coming around. It's so evil. Stay at home, wear a mask, save lives. You don't want to catch it. You don't want to catch the common sense, you guys. You don't want to catch it. Anyways, I dare, I'm sorry, I dare. And I have been very careful because I wasn't sure what direction she was going to go. If she was like, I was like, look, she's got a whole business that she's got to figure out. There's a lot of people in her ear.
 
 ## Entities Mentioned
 
