--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-32-43.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-32-43.md
@@ -12,7 +12,7 @@ anchor: "t-00-32-43"
 ## Transcript
 
 **Candace Owens:**
-> They're also provided diapers, car seats, counseling, and care for up to two years. If you've heard about Preborn before and have not yet taken action, there is no better time than right now. Their work is some of the most important work to help heal our country. One ultrasound costs just $28, but you can, of course, give 10 times that amount if you're able to. Head to preborn.com slash Candice to give. Again, that's preborn.com slash Candice. Also reminding you guys about American financing, because what if you could delay your next two mortgage payments? That's right. Imagine putting that money instead back in your pocket and getting a little breathing room ahead of the holidays. Well, that's possible if you call American financing today.
+> They're also provided diapers, car seats, counseling, and care for up to two years. If you've heard about Preborn before and have not yet taken action, there is no better time than right now. Their work is some of the most important work to help heal our country. One ultrasound costs just $28, but you can, of course, give 10 times that amount if you're able to. Head to preborn.com slash Candace to give. Again, that's preborn.com slash Candace. Also reminding you guys about American financing, because what if you could delay your next two mortgage payments? That's right. Imagine putting that money instead back in your pocket and getting a little breathing room ahead of the holidays. Well, that's possible if you call American financing today.
 
 ## Entities Mentioned
 
