--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-34-02.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-34-02.md
@@ -12,7 +12,7 @@ anchor: "t-00-34-02"
 ## Transcript
 
 **Candace Owens:**
-> Or visit americanfinancing.net slash Owens, americanfinancing.net slash Owens. You guys, Candice 19 is crazy, okay? I'm worried, trust the influencers, you know, people who are in the chat say, we need some Candice 19 merch, yeah. Don't go max, get the Vax. That's what Mark is saying. We're gonna get some gear for you guys. Don't go max, get the Vax. That's the vibe right now. How many influencers is it going to take to get everyone to roll up their sleeves and not go max? That's where we're at right now. How many people do we have to send out to tell them? Please, please do it. Wild, okay? I didn't get the Vax, I didn't get the COVID-19 Vax. I'm not getting whatever the heck this is, okay?
+> Or visit americanfinancing.net slash Owens, americanfinancing.net slash Owens. You guys, Candace 19 is crazy, okay? I'm worried, trust the influencers, you know, people who are in the chat say, we need some Candace 19 merch, yeah. Don't go max, get the Vax. That's what Mark is saying. We're gonna get some gear for you guys. Don't go max, get the Vax. That's the vibe right now. How many influencers is it going to take to get everyone to roll up their sleeves and not go max? That's where we're at right now. How many people do we have to send out to tell them? Please, please do it. Wild, okay? I didn't get the Vax, I didn't get the COVID-19 Vax. I'm not getting whatever the heck this is, okay?
 
 ## Entities Mentioned
 
