--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-35-31.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-35-31.md
@@ -12,7 +12,7 @@ anchor: "t-00-35-31"
 ## Transcript
 
 **Candace Owens:**
-> I just love all of the mommy sleuths that are this quickly, that are this quick. They wrote, I just came from the CVS times Erika Kirk town hall. And this is what she said about the conspiracies and Candice. One, Erica said she was pregnant when the Egyptian planes were flying and following her. So she wasn't on them. She said she has photo proof. Huh? I'm sorry. Did I ever accuse Erika (Erika Kirk) of being on Egyptian planes? When I found the Egyptian planes, I was concerned that they were following Charlie because I thought, wow, has there been a foreign government that has been tracking his events, like maybe, I don't know, like running through the operation early.
+> I just love all of the mommy sleuths that are this quickly, that are this quick. They wrote, I just came from the CVS times Erika Kirk town hall. And this is what she said about the conspiracies and Candace. One, Erica said she was pregnant when the Egyptian planes were flying and following her. So she wasn't on them. She said she has photo proof. Huh? I'm sorry. Did I ever accuse Erika (Erika Kirk) of being on Egyptian planes? When I found the Egyptian planes, I was concerned that they were following Charlie because I thought, wow, has there been a foreign government that has been tracking his events, like maybe, I don't know, like running through the operation early.
 
 ## Entities Mentioned
 
