--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-36-57.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-36-57.md
@@ -12,7 +12,7 @@ anchor: "t-00-36-57"
 ## Transcript
 
 **Candace Owens:**
-> Two, when Barry (Barry Weiss) asked her about the conspiracies and what she had to say to those saying them, Erica said, stop. No. Three, not about Candice, but she talked about Israel and said good things about Jews and how TPUSA is having Shabbat dinner. No, I didn't read that before we went live at AMFest. Okay. Okay. You guys, I want you to know.
+> Two, when Barry (Barry Weiss) asked her about the conspiracies and what she had to say to those saying them, Erica said, stop. No. Three, not about Candace, but she talked about Israel and said good things about Jews and how TPUSA is having Shabbat dinner. No, I didn't read that before we went live at AMFest. Okay. Okay. You guys, I want you to know.
 
 ## Entities Mentioned
 
