--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-51-49.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-51-49.md
@@ -12,7 +12,7 @@ anchor: "t-00-51-49"
 ## Transcript
 
 **Candace Owens:**
-> PurgeStore.com offers an organic yet potent all-natural formula that targets and kills parasites and aggressively flushes them from your system. Purge is not a synthetic drug. It is an herbal remedy that is safe yet powerful, and it can be taken daily to prevent future parasitic invasions. Right now, you can save 15% off at PurgeStore.com. If you use promo code Candice at checkout, PurgeStore will also gift you a free colon cleanse with a Purge subscription to help you dislodge and flush everything out of your system. That's promo code Candice at PurgeStore.com. Turning point faith, man. I love that it is so faithful.
+> PurgeStore.com offers an organic yet potent all-natural formula that targets and kills parasites and aggressively flushes them from your system. Purge is not a synthetic drug. It is an herbal remedy that is safe yet powerful, and it can be taken daily to prevent future parasitic invasions. Right now, you can save 15% off at PurgeStore.com. If you use promo code Candace at checkout, PurgeStore will also gift you a free colon cleanse with a Purge subscription to help you dislodge and flush everything out of your system. That's promo code Candace at PurgeStore.com. Turning point faith, man. I love that it is so faithful.
 
 ## Entities Mentioned
 
