--- a/content/timestamps/ep-6DhWawD4ZiM/t-00-56-52.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-00-56-52.md
@@ -12,7 +12,7 @@ anchor: "t-00-56-52"
 ## Transcript
 
 **Candace Owens:**
-> Candice speaks truth. Go Max, Candice. Charlie deserves nothing less. You are correct. And I don't trust the feds. And I don't believe that that is a sufficient enough answer. that, well, we're giving, we're telling the feds to do that. Well, I can tell you the feds are not doing that because I was the one who said I had the information about the French Foreign Legion being on the ground the day that Charlie was assassinated and the feds have not reached out to me. So shouldn't that concern Erica? Shouldn't she be like, hey, why didn't you, why didn't you reach out to me and say like, you know, hey, I'd like the information if no one's reached out to you. Like, why is that not happening? This is what I mean when I say that
+> Candace speaks truth. Go Max, Candace. Charlie deserves nothing less. You are correct. And I don't trust the feds. And I don't believe that that is a sufficient enough answer. that, well, we're giving, we're telling the feds to do that. Well, I can tell you the feds are not doing that because I was the one who said I had the information about the French Foreign Legion being on the ground the day that Charlie was assassinated and the feds have not reached out to me. So shouldn't that concern Erica? Shouldn't she be like, hey, why didn't you, why didn't you reach out to me and say like, you know, hey, I'd like the information if no one's reached out to you. Like, why is that not happening? This is what I mean when I say that
 
 ## Entities Mentioned
 
