--- a/content/timestamps/ep-6DhWawD4ZiM/t-01-00-25.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-01-00-25.md
@@ -12,7 +12,7 @@ anchor: "t-01-00-25"
 ## Transcript
 
 **Candace Owens:**
-> Servant of Yahweh writes, who was the young woman in the Candlewood Suites Hotel with the special ops guy? They left in the green truck on September 8th. If you or anyone you know works at that hotel and has that security footage, Please get it to Candice before it gets deleted. I would imagine if he is right, that footage is deleted. But that would still be a clue if it was deleted. So yeah, if you work for the Candlewood Suites Hotel at the military base, could you check that footage? Please for us on September 8th. More tips at CandiceOwens.com is who you can send that tip to. What you do and stay in at the Candlewood Suites Hotel. Sorry, that's an old hip-hop song. I'm out of control.
+> Servant of Yahweh writes, who was the young woman in the Candlewood Suites Hotel with the special ops guy? They left in the green truck on September 8th. If you or anyone you know works at that hotel and has that security footage, Please get it to Candace before it gets deleted. I would imagine if he is right, that footage is deleted. But that would still be a clue if it was deleted. So yeah, if you work for the Candlewood Suites Hotel at the military base, could you check that footage? Please for us on September 8th. More tips at CandiceOwens.com is who you can send that tip to. What you do and stay in at the Candlewood Suites Hotel. Sorry, that's an old hip-hop song. I'm out of control.
 
 ## Entities Mentioned
 
