--- a/content/timestamps/ep-6DhWawD4ZiM/t-01-01-07.md
+++ b/content/timestamps/ep-6DhWawD4ZiM/t-01-01-07.md
@@ -12,7 +12,7 @@ anchor: "t-01-01-07"
 ## Transcript
 
 **Candace Owens:**
-> I'm sorry, guys, this is a new strand of Candice 19, and it's resistant. It is absolutely resistant, even to the backs. So, anyways, you guys, we're gonna keep going, Max, and I am going to keep on this, see what comes of this, and we will see you guys tomorrow.
+> I'm sorry, guys, this is a new strand of Candace 19, and it's resistant. It is absolutely resistant, even to the backs. So, anyways, you guys, we're gonna keep going, Max, and I am going to keep on this, see what comes of this, and we will see you guys tomorrow.
 
 ## Entities Mentioned
 
