--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-00-41.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-00-41.md
@@ -12,7 +12,7 @@ anchor: "t-00-00-41"
 ## Transcript
 
 **Candace Owens:**
-> I just cannot see how this would lead to anything other than a full confession from the government about the military's involvement in his assassination. But I'm just going to deliver the facts and see where they land. Welcome back to Candice. I am just going to tell you guys exactly how everything came about, everything that I'm about to deliver to you. Yesterday was a holy day of obligation in the Catholic church.
+> I just cannot see how this would lead to anything other than a full confession from the government about the military's involvement in his assassination. But I'm just going to deliver the facts and see where they land. Welcome back to Candace. I am just going to tell you guys exactly how everything came about, everything that I'm about to deliver to you. Yesterday was a holy day of obligation in the Catholic church.
 
 ## Entities Mentioned
 
