--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-25-05.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-25-05.md
@@ -12,7 +12,7 @@ anchor: "t-00-25-05"
 ## Transcript
 
 **Candace Owens:**
-> I have the same question that you have, because I've looked and it does seem that, and I never even questioned this, whether or not it's potential that Blake (Blake Neff) Neff (Blake Neff) has military connections as well. I guess that kind of like, I just thought this is a producer Charlie Kirk show, but it is interesting that somebody, and this would be a brother because I don't know, this is the person that interrogated him. And eventually, he says, was a person that had a heart and realized that he was not a part of any spy network and eventually escorted him off of the base and onto his way. That's a lot of coincidence for me. Now he says to me, communicated this to me very clearly, he said, Candice, I know how these meetings work. These are the meetings that are had ahead of an operation.
+> I have the same question that you have, because I've looked and it does seem that, and I never even questioned this, whether or not it's potential that Blake (Blake Neff) Neff (Blake Neff) has military connections as well. I guess that kind of like, I just thought this is a producer Charlie Kirk show, but it is interesting that somebody, and this would be a brother because I don't know, this is the person that interrogated him. And eventually, he says, was a person that had a heart and realized that he was not a part of any spy network and eventually escorted him off of the base and onto his way. That's a lot of coincidence for me. Now he says to me, communicated this to me very clearly, he said, Candace, I know how these meetings work. These are the meetings that are had ahead of an operation.
 
 ## Entities Mentioned
 
