--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-41-29.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-41-29.md
@@ -12,7 +12,7 @@ anchor: "t-00-41-29"
 ## Transcript
 
 **Candace Owens:**
-> I will have more for you, hopefully, in the coming days. But yeah, this is very scary, very scary. And I was always telling the truth about the coordination of an assassination attempt, which involved Israel and French intelligence agencies. Now, on that note, I am obviously taking a lot of personal risk to get out the truth to you guys pertaining to what is happening to Charlie Kirk. One of the easiest things in the world is to be a critic of Candice Owens and a part of the people who do not have the courage to prod this federal narrative.
+> I will have more for you, hopefully, in the coming days. But yeah, this is very scary, very scary. And I was always telling the truth about the coordination of an assassination attempt, which involved Israel and French intelligence agencies. Now, on that note, I am obviously taking a lot of personal risk to get out the truth to you guys pertaining to what is happening to Charlie Kirk. One of the easiest things in the world is to be a critic of Candace Owens and a part of the people who do not have the courage to prod this federal narrative.
 
 ## Entities Mentioned
 
