--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-51-03.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-51-03.md
@@ -12,7 +12,7 @@ anchor: "t-00-51-03"
 ## Transcript
 
 **Candace Owens:**
-> Like since we've been saying, let's fed slop, a lot of people are recognizing fed slop and deciding that they do not wish to consume it, right? That's not what you want to consume a fed slop. Um, narrative. The comments from today's episode, I don't know, my phone, my computer's, okay, never mind, it was kind of freezing, but now it's not. Alyssa writes, Candice, you are teaching the world a new form of investigative journalism that it has never seen. You are impacting history in front of our eyes. The power of the collective is unstoppable and you prove that daily. Sending prayers and love from Montana. I hope that is the reality because I'm telling you, I trust Tennessee, 10 Tennesseans more than I trust the feds right now.
+> Like since we've been saying, let's fed slop, a lot of people are recognizing fed slop and deciding that they do not wish to consume it, right? That's not what you want to consume a fed slop. Um, narrative. The comments from today's episode, I don't know, my phone, my computer's, okay, never mind, it was kind of freezing, but now it's not. Alyssa writes, Candace, you are teaching the world a new form of investigative journalism that it has never seen. You are impacting history in front of our eyes. The power of the collective is unstoppable and you prove that daily. Sending prayers and love from Montana. I hope that is the reality because I'm telling you, I trust Tennessee, 10 Tennesseans more than I trust the feds right now.
 
 ## Entities Mentioned
 
