--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-53-48.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-53-48.md
@@ -12,7 +12,7 @@ anchor: "t-00-53-48"
 ## Transcript
 
 **Candace Owens:**
-> Do you guys believe that it was a trans, a gendered person on top of a rooftop? I don't. I certainly don't. Maybe Tim (Tim Pool) Pool (Tim Pool) does. Coralia Montalvo writes, may God be with you and your family, Candice. Keep telling the truth. You have a whole army supporting you. And by the way, like this guy proves, there are a lot of incredible men in the military. It is always at the top where corruption happens. I hope that you take away from this that we are infiltrated as a nation. We have gangs that are controlling a lot and that we need to make our community smaller. We need to know who people are in our communities.
+> Do you guys believe that it was a trans, a gendered person on top of a rooftop? I don't. I certainly don't. Maybe Tim (Tim Pool) Pool (Tim Pool) does. Coralia Montalvo writes, may God be with you and your family, Candace. Keep telling the truth. You have a whole army supporting you. And by the way, like this guy proves, there are a lot of incredible men in the military. It is always at the top where corruption happens. I hope that you take away from this that we are infiltrated as a nation. We have gangs that are controlling a lot and that we need to make our community smaller. We need to know who people are in our communities.
 
 ## Entities Mentioned
 
