--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-55-15.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-55-15.md
@@ -12,7 +12,7 @@ anchor: "t-00-55-15"
 ## Transcript
 
 **Candace Owens:**
-> Gracie Lu writes, there is no TPUSA without Charlie. I've never seen such a group of disingenuous groups. The likes of Andrew, Blake (Blake Neff), Mikey (Mikey McCoy), Tyler (Tyler Robinson), et cetera. It's heartbreaking on top of heartbreak. Merry Christmas to you and your family. Continued prayers for you and yours. Thank you so much. Mary Ivott writes, Candice Security Fund, you know what? I actually said to my husband, like, we need to actually build our own security. We do, from the ground up. Like, we just need to build our own security and know who these people are and know everyone. And because this Brian Harpole (Brian Harpole) thing has given me a chill and this Dan Flood (Dan Flood)stup has given me a chill, and maybe we will actually accept that offer and start a fund in the coming days or, you know, in the coming weeks on how long it would take to put it together.
+> Gracie Lu writes, there is no TPUSA without Charlie. I've never seen such a group of disingenuous groups. The likes of Andrew, Blake (Blake Neff), Mikey (Mikey McCoy), Tyler (Tyler Robinson), et cetera. It's heartbreaking on top of heartbreak. Merry Christmas to you and your family. Continued prayers for you and yours. Thank you so much. Mary Ivott writes, Candace Security Fund, you know what? I actually said to my husband, like, we need to actually build our own security. We do, from the ground up. Like, we just need to build our own security and know who these people are and know everyone. And because this Brian Harpole (Brian Harpole) thing has given me a chill and this Dan Flood (Dan Flood)stup has given me a chill, and maybe we will actually accept that offer and start a fund in the coming days or, you know, in the coming weeks on how long it would take to put it together.
 
 ## Entities Mentioned
 
