--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-55-59.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-55-59.md
@@ -12,7 +12,7 @@ anchor: "t-00-55-59"
 ## Transcript
 
 **Candace Owens:**
-> I will run that to my husband. I actually think that that is a good idea. I think we need to... This thing has really scared me, this French intelligence thing and the lack of commentary from the White House. This thing is really far-reaching. The good and the true and the beautiful writes, go Max, Candice, thank you so much. And this person writes, what do you think Tim (Tim Pool) Pool (Tim Pool)e's beanie smells like? That is funny. I do not ever want to know the answer to that question. Lastly, P. Fegliano writes, wearing my Candice swag today and getting only nods and smiles, nothing negative. Thank you, Candice, for your courage.
+> I will run that to my husband. I actually think that that is a good idea. I think we need to... This thing has really scared me, this French intelligence thing and the lack of commentary from the White House. This thing is really far-reaching. The good and the true and the beautiful writes, go Max, Candace, thank you so much. And this person writes, what do you think Tim (Tim Pool) Pool (Tim Pool)e's beanie smells like? That is funny. I do not ever want to know the answer to that question. Lastly, P. Fegliano writes, wearing my Candace swag today and getting only nods and smiles, nothing negative. Thank you, Candace, for your courage.
 
 ## Entities Mentioned
 
