--- a/content/timestamps/ep-t4U7NjnUEgc/t-00-33-29.md
+++ b/content/timestamps/ep-t4U7NjnUEgc/t-00-33-29.md
@@ -12,4 +12,4 @@ anchor: "t-00-33-29"
 ## Transcript
 
 **Candace Owens:**
-> So you get to avoid the costly middlemen because the beef is sent directly from Riverbend Ranch to your home. And you'll love the fact that you also get to support American ranchers. Right now, when you order from RiverBendRanch.com and you use promo code Candice at checkout, you will get $20 off your first order. Again, that's RiverBendRanch.com promo code Candice at checkout. I also want to remind you guys about pre-born because when they double down on abortion, we have to double down on supporting life. Through our partnership with pre-born, we can help save babies and support mothers that are in need because every day, pre-born's clinics rescue hundreds of babies because when a mother sees her baby on an ultrasound and hears that tiny heartbeat, her chance of choosing life doubles.
+> So you get to avoid the costly middlemen because the beef is sent directly from Riverbend Ranch to your home. And you'll love the fact that you also get to support American ranchers. Right now, when you order from RiverBendRanch.com and you use promo code Candace at checkout, you will get $20 off your first order. Again, that's RiverBendRanch.com promo code Candace at checkout. I also want to remind you guys about pre-born because when they double down on abortion, we have to double down on supporting life. Through our partnership with pre-born, we can help save babies and support mothers that are in need because every day, pre-born's clinics rescue hundreds of babies because when a mother sees her baby on an ultrasound and hears that tiny heartbeat, her chance of choosing life doubles.
