--- a/content/timestamps/ep-tB5SXXmd9vU/t-00-04-29.md
+++ b/content/timestamps/ep-tB5SXXmd9vU/t-00-04-29.md
@@ -12,7 +12,7 @@ anchor: "t-00-04-29"
 ## Transcript
 
 **Candace Owens:**
-> Now, I got even more specific. I said there was a paper trail that Macron allegedly paid $1.5 million. And I am saying allegedly because until I can physically see with my own eyes inside of these accounts and verify the transfer of that payment, it's of course alleged. The amount is alleged. Two assassins were hired, one Israeli, one French-Canadian woman, okay, a man and a woman. And I also said that the money ran through the elite gentlemen's club des Saints. Again, I was very specific.
+> Now, I got even more specific. I said there was a paper trail that Macron (Emmanuel Macron) allegedly paid $1.5 million. And I am saying allegedly because until I can physically see with my own eyes inside of these accounts and verify the transfer of that payment, it's of course alleged. The amount is alleged. Two assassins were hired, one Israeli, one French-Canadian woman, okay, a man and a woman. And I also said that the money ran through the elite gentlemen's club des Saints. Again, I was very specific.
 
 ## Entities Mentioned
 
