--- a/content/timestamps/ep-vwG1juDCQZQ/t-00-21-29.md
+++ b/content/timestamps/ep-vwG1juDCQZQ/t-00-21-29.md
@@ -12,7 +12,7 @@ anchor: "t-00-21-29"
 ## Transcript
 
 **Candace Owens:**
-> okay: "Everybody, we're going to keep going. And, you know, Mikey's going to take over for Charlie (Charlie Kirk) at his Liberty Convocation Liberty event that he has—which is going to be sold out. And Turning Point USA—people who are directors of faith—they're going to be telling you, like, 'Mikey's got what it takes.' Here's which blah, blah, blah. And then Mikey's going to tell stories about that day, go on a show multiple times. Andrew's going to talk about it. Everyone's going to talk about it. And they don't want to talk about the stuff that we care about. Like this is what it means to have a podcast. Right. You can't want fame
+> okay: "Everybody, we're going to keep going. And, you know, Mikey's going to take over for Charlie (Charlie Kirk) at his Liberty Convocation Liberty event that he has—which is going to be sold out. And Turning Point USA—people who are directors of faith—they're going to be telling you, like, 'Mikey's got what it takes.' Here's which blah, blah, blah. And then Mikey's going to tell stories about that day, go on a show multiple times. Andrew (Andrew Kolvet)'s going to talk about it. Everyone's going to talk about it. And they don't want to talk about the stuff that we care about. Like this is what it means to have a podcast. Right. You can't want fame
 
 ## Entities Mentioned
 
