--- a/content/timestamps/ep-vwG1juDCQZQ/t-01-00-33.md
+++ b/content/timestamps/ep-vwG1juDCQZQ/t-01-00-33.md
@@ -12,7 +12,7 @@ anchor: "t-01-00-33"
 ## Transcript
 
 **Candace Owens:**
-> Might have been for the embassy opening. I'm not positive. Yes: regarding that heart still beating if he instantly went to heaven. Didn't Andrew offer up an explanation? This was kind of one of the things that people were asking: how did he go into surgery? Because they explained that he had died instantly. It wasn't just Erika, by the way: Frank Turek said it on stage—that he knew in the car that he was gone. But maybe he still had a pulse. Again: this would be a great thing—since they mentioned it—for Andrew or Frank Turek to respond to. It's a very easy thing for them to respond to to clear up some confusion. Jesse Webb writes: "The amazing, heroic, outstanding, fearless, talented, intelligent, and beautiful Queen Candace of podcasts: take a bow. Nothing can stop you.
+> Might have been for the embassy opening. I'm not positive. Yes: regarding that heart still beating if he instantly went to heaven. Didn't Andrew (Andrew Kolvet) offer up an explanation? This was kind of one of the things that people were asking: how did he go into surgery? Because they explained that he had died instantly. It wasn't just Erika, by the way: Frank Turek said it on stage—that he knew in the car that he was gone. But maybe he still had a pulse. Again: this would be a great thing—since they mentioned it—for Andrew (Andrew Kolvet) or Frank Turek to respond to. It's a very easy thing for them to respond to to clear up some confusion. Jesse Webb writes: "The amazing, heroic, outstanding, fearless, talented, intelligent, and beautiful Queen Candace of podcasts: take a bow. Nothing can stop you.
 
 ## Entities Mentioned
 
