--- a/content/timestamps/ep-5autG89PW6w/t-00-53-30.md
+++ b/content/timestamps/ep-5autG89PW6w/t-00-53-30.md
@@ -20,3 +20,5 @@ anchor: "t-00-53-30"
   > "...following: "Was any of it real?" You know, like I—when I expressed to you that I felt that Charlie (Charlie Kirk)'s life was like The Truman Show— and then I know that's how you guys felt because we were—we were ..."
 - [Irina Zarutska](/entities/person-irina-zarutska.md) (PERSON)
   > "... no matter what they were—somehow were being platformed and allowed. So thank you, John. Thank you, Irina. I cried last night reading that. I almost cried on air there reading it again. I needed it. So any..."
+- [The Truman Show](/entities/work-the-truman-show.md) (WORK)
+  > "I felt that Charlie Kirk's life was like The Truman Show"
