--- a/content/timestamps/ep-YA1FxrDWNIo/t-00-37-35.md
+++ b/content/timestamps/ep-YA1FxrDWNIo/t-00-37-35.md
@@ -20,3 +20,5 @@ anchor: "t-00-37-35"
   > "...ause I am disgusted. I am genuinely disgusted. I am looking around and wondering whether Charlie's (Charlie Kirk's) entire life was The Truman Show. None of you guys are behaving in the way that you should be beh..."
 - [Turning Point USA](/entities/org-turning-point-usa.md) (ORG)
   > "...ing Point? I'm asking that question genuinely. Yeah, I'm putting the fire here right at the feet of Turning Point because I am disgusted. I am genuinely disgusted. I am looking around and wondering whether Charlie..."
+- [The Truman Show](/entities/work-the-truman-show.md) (WORK)
+  > "wondering whether Charlie's entire life was The Truman Show"
